--- a/public/style.css
+++ b/public/style.css
@@ -51,12 +51,18 @@ nav{
     height: 100vh;
     margin-top: 0px;
   background-image: linear-gradient(45deg, #ee565b, #fad0c4);
+padding: 10px;
+display: grid;
+grid-template-columns: auto auto auto;
+grid-template-rows: auto auto auto;
+
 }
 
 .card{
    
-    background-color: aquamarine;
-    margin: 0px;
+    background-color: rgb(117, 144, 135);
+    margin: 5px;
+    padding: 10px;
 }
 
 .Country_name{
