--- a/public/style.css
+++ b/public/style.css
@@ -48,23 +48,45 @@ nav{
 /* country_page */
 
 .country_body{
-    height: 100vh;
+    height: 100%;
     margin-top: 0px;
   background-image: linear-gradient(45deg, #ee565b, #fad0c4);
-padding: 10px;
-display: grid;
-grid-template-columns: auto auto auto;
-grid-template-rows: auto auto auto;
+padding: 20px;
 
+display: grid;
+gap: 1rem;
+}
+
+@media screen and (min-width:620px ){
+    .country_body{
+       grid-template-columns: auto auto;
+    } 
+}
+@media screen and (min-width:920px ){
+    .country_body{
+       grid-template-columns: auto auto auto;
+    } 
 }
 
 .card{
    
-    background-color: rgb(117, 144, 135);
+    background-color: rgb(239, 241, 233);
     margin: 5px;
-    padding: 10px;
+    padding: 20px;
+    display: grid;
+    grid-template-rows: 190px 50px auto;
+    border: 1px solid #ddd;
+}
+
+.CardImage{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  
+    /* border: 2px solid black; */
 }
 
 .Country_name{
+    padding-top: 10px;
    margin: 0px;
 }
