--- a/public/style.css
+++ b/public/style.css
@@ -134,7 +134,7 @@ justify-content: space-between;
 
 /* search bar */
 
-.search-container {
+/* .search-container {
     max-width: 400px;
     margin: auto;
     position: relative;
@@ -175,4 +175,4 @@ justify-content: space-between;
     border-radius: 5px;
     background: #f9f9f9;
   }
-  
+   */
